deps: regenerate library
