# src/notehub_py/models/data_set_field.py
@@ -1,0 +1,102 @@
+# coding: utf-8
+
+"""
+    Notehub API
+
+    The OpenAPI definition for the Notehub.io API. 
+
+    The version of the OpenAPI document: 1.2.0
+    Contact: engineering@blues.io
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+from pydantic import BaseModel, ConfigDict, Field, StrictInt, StrictStr, field_validator
+from typing import Any, ClassVar, Dict, List, Optional
+from typing import Optional, Set
+from typing_extensions import Self
+
+class DataSetField(BaseModel):
+    """
+    DataSetField
+    """ # noqa: E501
+    name: Optional[StrictStr] = Field(default=None, description="The name of the field")
+    datatype: Optional[StrictInt] = Field(default=None, description="The datatype of the field")
+    jsonata: Optional[StrictStr] = Field(default=None, description="the JSONata expression used to populate this field")
+    __properties: ClassVar[List[str]] = ["name", "datatype", "jsonata"]
+
+    @field_validator('datatype')
+    def datatype_validate_enum(cls, value):
+        """Validates the enum"""
+        if value is None:
+            return value
+
+        if value not in set([0, 1, 2]):
+            raise ValueError("must be one of enum values (0, 1, 2)")
+        return value
+
+    model_config = ConfigDict(
+        populate_by_name=True,
+        validate_assignment=True,
+        protected_namespaces=(),
+    )
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Optional[Self]:
+        """Create an instance of DataSetField from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        excluded_fields: Set[str] = set([
+        ])
+
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude=excluded_fields,
+            exclude_none=True,
+        )
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
+        """Create an instance of DataSetField from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "name": obj.get("name"),
+            "datatype": obj.get("datatype"),
+            "jsonata": obj.get("jsonata")
+        })
+        return _obj
+
+
